[NPG-53] 통합테스트 Support Utility 추가 (#115)